--- a/css/custom.css
+++ b/css/custom.css
@@ -7,7 +7,30 @@ a.logo{
 	color: none;
 }
 
+.simple-bar .logo{
+	bottom: 5px;
+}
 
 .form-message{
 	height: 150px;
+}
+
+#navEnquire{
+	margin-top: -14px;
+}
+
+@media all and (max-width: 767px) {
+	img.logo .logo-dark{
+		margin-top: -20px !important;
+		padding-top: 10px;
+	}
+	#navEnquire{
+		margin-bottom: 8px;
+	}
+}
+
+@media all and (max-width: 767px){
+.simple-bar .logo {
+    max-height: 70px;
+    bottom: 14px;
 }
